--- a/MyPortfolio/package.json
+++ b/MyPortfolio/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "js-confetti": "^0.12.0",
+    "pdfjs-dist": "^4.3.136",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pdf": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
